# Rag-Kit

./: .gitignore  README.md  SKILL.md  pyproject.toml  rag-kit.example.yaml
rag_kit/: __init__.py  autostart.py  config.py  watcher.py
rag_kit/cli/: __init__.py  main.py
rag_kit/embed/: __init__.py
rag_kit/ingest/: __init__.py  language.py  ocr.py  pipeline.py
rag_kit/store/: __init__.py
rag_kit/vlm/: __init__.py  captioner.py  extractor.py  language.py
scripts/: download-models.bat  download-models.sh  install-dgx-spark.sh  install-windows.bat
tests/: create_test_pdf.py  test_cli.py  test_embed_store.py  test_ingest_pipeline.py  test_rag_pipeline.py  test_vlm.py
